# LabProtocolSimulator

./: .replit  ANDROID_BUILD_GUIDE.md  accept_licenses.py  android_app.py  app.py  build_android.bat  build_android.py  build_android.sh  build_android_auto.py  check_package.py  create_bits_logo.py  download_bits_logo.py  install_android_deps.bat  launch_app_127.bat  pyproject.toml  replit.nix  run.bat  run_app_localhost.bat  start.bat
.config/.android/cache/: sdkinf-1_029182a5-sys-img2-3_xml  sdkinf-1_02c91cf8-sys-img2-3_xml  sdkinf-1_2193743a-addon2-3_xml  sdkinf-1_3ba9aebd-sys-img2-3_xml  sdkinf-1_4842592b-sys-img2-3_xml  sdkinf-1_53ed092d-addon2-3_xml  sdkinf-1_67805722-sys-img2-3_xml  sdkinf-1_6dc81d35-sys-img2-3_xml  sdkinf-1_705f9c93-sys-img2-3_xml  sdkinf-1_72765e83-sys-img2-3_xml  (+12 more)
.streamlit/: config.toml  mobile.yaml
chemengsim/: __init__.py  __main__.py  app.py  build_react.py  chat.py  utils.py
chemengsim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chemengsim/experiments/: __init__.py  batch_reactor.py  cstr.py  filter_press.py  pfr.py  semi_batch_reactor.py
chemengsim/quizzes/: __init__.py
chemengsim/react_build/: index.html
chemengsim/react_src/: App.js  package-lock.json  package.json  theme.js
chemengsim/report_generation/: __init__.py  basket_centrifuge.py  classifiers.py  froth_flotation.py  main.py  report_generator.py  report_utils.py  rotary_vacuum_filter.py
chemengsim/videos/: __init__.py
experiments/: semi_batch_reactor.py
quizzes/: quiz_module.py
videos/: __init__.py  demo_videos.py
(+24 files in other folders)
